--- a/css/styles.css
+++ b/css/styles.css
@@ -484,6 +484,118 @@ ul {
   fill: #ffffff !important;
 }
 
+.portfolio {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 120px 0px;
+  gap: 72px;
+  background-color: #fff;
+  /* box-sizing: border-box; */
+}
+
+.portfolio__title {
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  text-align: center;
+  color: #2e2f42;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 72px;
+}
+
+.portfolio__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.portfolio__container-item {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  width: calc((100% - 48px) / 3);
+  /* box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 2px 1px rgba(46, 47, 66, 0.08); */
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio__image-wrapper {
+  overflow: hidden;
+  position: relative;
+}
+.portfolio__container-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
+}
+
+.portfolio__container-item:first-child {
+  width: calc((100% - 48px) / 3);
+}
+
+.portfolio__overlay-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  color: var(--text-color, #f4f4fd);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio__container-item:hover .portfolio__overlay-text {
+  transform: translateY(0%);
+}
+
+.portfolio__container-item:hover .portfolio__overlay {
+  bottom: 0;
+  opacity: 1;
+}
+
+.portfolio__info {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+.portfolio__item-img {
+  width: 360px;
+  height: 300px;
+}
+
+.portfolio__item-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 8px;
+}
+
+.portfolio__item-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  padding: 0;
+  margin: 0;
+}
+
 .footer {
   display: flex;
   flex-direction: row;
@@ -607,22 +719,23 @@ ul {
 .footer-form {
   display: flex;
   flex-direction: row;
-  gap: 16px;
+  gap: 24px;
 }
 
-.footer-form input {
+.footer-input {
   width: 264px;
   height: 40px;
   flex-shrink: 0;
   border-radius: 4px;
-  border: 1px solid var(--WHITE, #fff);
+  border: 1px solid #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  background: var(--NAVY-BLUE, #2E2F42);
+  background: #2E2F42;
   padding: 8px 16px;
+  color: #ffffff;
 }
 
 .footer-form input::placeholder {
-  color: var(--WHITE, #fff);
+  color:  #fff;
   font-family: Roboto;
   font-size: 12px;
   font-style: normal;
@@ -631,7 +744,11 @@ ul {
   letter-spacing: 0.48px;
 }
 
-.footer-form__submit {
+.footer-icon {
+  margin-left: 16px;
+}
+
+.footer-button {
   display: flex;
   padding: 8px 24px;
   justify-content: center;
@@ -649,118 +766,8 @@ ul {
   letter-spacing: 0.64px;
   border: none;
   cursor: pointer;
-}
-
-.portfolio {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 120px 0px;
-  gap: 72px;
-  background-color: #fff;
-  /* box-sizing: border-box; */
-}
-
-.portfolio__title {
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  text-align: center;
-  color: #2e2f42;
-  padding: 0;
-  margin: 0;
-  margin-bottom: 72px;
-}
-
-.portfolio__container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  column-gap: 24px;
-  row-gap: 48px;
-}
-
-.portfolio__container-item {
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-  width: calc((100% - 48px) / 3);
-  /* box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-            0px 1px 1px rgba(46, 47, 66, 0.16),
-            0px 2px 1px rgba(46, 47, 66, 0.08); */
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio__image-wrapper {
-  overflow: hidden;
-  position: relative;
-}
-.portfolio__container-item:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  transform: translateY(0%);
-}
-
-.portfolio__container-item:first-child {
-  width: calc((100% - 48px) / 3);
-}
-
-.portfolio__overlay-text {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 40px 32px;
-  background-color: #4d5ae5;
-  color: var(--text-color, #f4f4fd);
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio__container-item:hover .portfolio__overlay-text {
-  transform: translateY(0%);
-}
-
-.portfolio__container-item:hover .portfolio__overlay {
-  bottom: 0;
-  opacity: 1;
-}
-
-.portfolio__info {
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
-}
-
-.portfolio__item-img {
-  width: 360px;
-  height: 300px;
-}
-
-.portfolio__item-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  padding: 0;
-  margin: 0;
-  margin-bottom: 8px;
-}
-
-.portfolio__item-text {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-  padding: 0;
-  margin: 0;
+  min-width: 165px;
+  font-family: "Roboto", sans-serif
 }
 
 .backdrop {
