--- a/css/styles.css
+++ b/css/styles.css
@@ -729,9 +729,23 @@ ul {
   border-radius: 4px;
   border: 1px solid #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  background: #2E2F42;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
   padding: 8px 16px;
   color: #ffffff;
+}
+
+.footer-text {
+  color:  #FFF;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    /* 150% */
+    letter-spacing: 0.32px;
 }
 
 .footer-form input::placeholder {
@@ -776,13 +790,13 @@ ul {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.5);
+  background-color: rgba(46, 47, 66, 0.4);
   display: flex;
   align-items: center;
   justify-content: center;
   opacity: 0;
-  visibility: hidden;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 99999;
 }
 .backdrop.is-open {
@@ -796,22 +810,31 @@ ul {
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
   padding: 24px;
   width: 408px;
-  height: 584px;
+  min-height: 584px;
   flex-shrink: 0;
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal__close {
   position: absolute;
   top: 24px;
-  right: 15px;
-  background: none;
-  border: none;
-  font-size: 24px;
+  right: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  height: 24px;
   cursor: pointer;
+  width: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e7e9fc;
+  padding: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal__form {
   display: flex;
@@ -839,6 +862,7 @@ ul {
 }
 .modal__icon {
   margin-right: 5px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal__input-wrapper input {
   border: none;
