--- a/css/styles.css
+++ b/css/styles.css
@@ -840,7 +840,7 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
   background-color: #404bbf;
   border: none;
 }
-.modal-close:focus {
+.modal__close:focus {
   background-color: #404bbf;
   border: none;
 }
@@ -854,7 +854,7 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 14px;
+  line-height: 1.17;
   letter-spacing: 0.48px;
   display: block;
   margin-bottom: 4px;
@@ -886,13 +886,11 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: absolute;
   left: 16px;
-  top: 50%;
+top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal__icon:focus {
-  fill: #4D5AE5;
-}
+
 .modal__icon:hover {
   fill: #ffffff;
 }
@@ -900,18 +898,30 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
   fill: #ffffff;
 }
 
-textarea {
-  width: 360px;
+.textarea {
+width: 100%;
   height: 120px;
   flex-shrink: 0;
   border-radius: 4px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
+border: 1px solid rgba(46, 47, 66, 0.4);
+background-color: transparent;
+padding: 8px 16px;
+outline: transparent;
+resize: none;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 5px;
   margin-bottom: 16px;
   margin-top: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+.textarea:focus {
+  border-color: #4D5AE5;
 }
 
-textarea::placeholder {
+.textarea::placeholder {
   color: rgba(46, 47, 66, 0.4);
   font-family: Roboto;
   font-size: 12px;
@@ -919,6 +929,9 @@ textarea::placeholder {
   font-weight: 400;
   line-height: 14px;
   letter-spacing: 0.48px;
+}
+.checkbox-content {
+  margin-bottom: 24px;
 }
 .modal__checkbox {
   display: flex;
@@ -929,8 +942,8 @@ textarea::placeholder {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 14px;
-  letter-spacing: 0.48px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   margin-bottom: 24px;
 }
 .modal__checkbox input {
@@ -939,10 +952,15 @@ textarea::placeholder {
 .custom-checkbox {
   width: 16px;
   height: 16px;
-  border: 1px solid #ccc;
-  display: inline-block;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   margin-right: 5px;
   position: relative;
+  fill: transparent;
 }
 .modal__checkbox input:checked + .custom-checkbox::before {
   content: "\2713";
