--- a/css/styles.css
+++ b/css/styles.css
@@ -839,6 +839,7 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
 .modal__close:hover {
   background-color: #404bbf;
   border: none;
+  fill: #fff;
 }
 .modal__close:focus {
   background-color: #404bbf;
@@ -870,7 +871,7 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
   margin-bottom: 8px;
   position: relative;
 }
-.input-name {
+.name-input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -973,9 +974,7 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 2px;
 }
 .modal__submit {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: block;
   padding: 16px 32px;
   align-items: flex-start;
   border-radius: 4px;
@@ -990,10 +989,12 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.64px;
-  width: 169px;
+  min-width: 169px;
   cursor: pointer;
   margin: 0 auto;
   height: 56px;
+  font-family: "Roboto", sans-serif;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal__submit:hover {
   background: #504ccf;
