--- a/css/styles.css
+++ b/css/styles.css
@@ -875,7 +875,7 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
 .name-input {
   width: 100%;
   height: 40px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
+border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
   padding-left: 38px;
@@ -973,7 +973,7 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   height: 8px;
 }
 
-input:checked+.custom-checkbox {
+input:checked+label .custom-checkbox {
   background-color: var(--checkbox-bg-checked);
   border: none;
   fill: var(--checkbox-fill-checked);
@@ -1021,4 +1021,10 @@ input:checked+.custom-checkbox {
 .link {
   margin-left: 3px;
   color: #4d5ae5;
+}
+
+
+:root {
+  --checkbox-bg-checked: #404bbf;
+  --checkbox-fill-checked: #F4F4FD;
 }
