--- a/css/styles.css
+++ b/css/styles.css
@@ -865,12 +865,12 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
   margin-bottom: 4px;
 }
 .modal__input-wrapper {
-  display: flex;
+  /* display: flex;
   justify-content: center;
   align-items: center;
-  padding: 5px;
+  padding: 5px; */
   margin-bottom: 8px;
-  position: relative;
+  /* position: relative; */
 }
 .name-input {
   width: 100%;
