--- a/css/styles.css
+++ b/css/styles.css
@@ -870,18 +870,17 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
   align-items: center;
   padding: 5px; */
   margin-bottom: 8px;
-  /* position: relative; */
+  position: relative;
 }
 .name-input {
   width: 100%;
   height: 40px;
-border: 1px solid rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
   padding-left: 38px;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  border-color: #4D5AE5;
 }
 .input-wrapper input:focus+svg {
   fill: #4D5AE5;
@@ -893,7 +892,6 @@ border: 1px solid rgba(46, 47, 66, 0.4);
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal__icon:hover {
@@ -940,7 +938,7 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-bottom: 24px;
 }
 .modal__checkbox {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   cursor: pointer;
   color: #8e8f99;
