--- a/css/styles.css
+++ b/css/styles.css
@@ -819,6 +819,7 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
   align-items: center;
   justify-content: center;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translate(-50%, -50%);
 }
 .modal__close {
   position: absolute;
@@ -882,8 +883,11 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.input-wrapper input:focus+svg {
+.modal__input-wrapper input:focus+svg {
   fill: #4D5AE5;
+}
+.modal__input-wrapper input:focus {
+  border-color: #4D5AE5;
 }
 .modal__icon {
   margin-right: 5px;
@@ -938,7 +942,6 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-bottom: 24px;
 }
 .modal__checkbox {
-  display: inline-flex;
   align-items: center;
   cursor: pointer;
   color: #8e8f99;
